--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/JamSprint/MultiPong#readme",
   "dependencies": {
+    "cutestrap": "^1.3.1",
     "express": "^4.16.2"
   }
 }
