--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node app.js --presets es2015,stage-2"
+    "start": "babel-node server/app.js --presets es2015,stage-2"
   },
   "repository": {
     "type": "git",
