--- a/package.json
+++ b/package.json
@@ -24,7 +24,14 @@
   },
   "homepage": "https://github.com/JamSprint/MultiPong#readme",
   "dependencies": {
-    "express": "^4.16.2"
+    "angular": "^1.6.6",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "express": "^4.16.2",
+    "ng-annotate": "^1.2.2",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
